--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,6 @@
+= Forked
+This gem is forked from https://github.com/johntopley/manifesto 
+
 = manifesto
 
 Manifesto dynamically generates an {HTML5 cache manifest}[http://developer.apple.com/safari/library/documentation/iphone/conceptual/safarijsdatabaseguide/OfflineApplicationCache/OfflineApplicationCache.html] for offline application caching. It returns a list of files within the specified directory and sub-directories.
